# electronic-prescription-service-release-notes

./: .flake8  .gitallowed  .gitignore  .grype.yaml  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  Makefile  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  sonar-project.properties  tsconfig.defaults.json  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/create_int_release_candidate/: action.yml
.github/actions/update_release_notes/: action.yaml
.github/config/: settings.yml
.github/scripts/: create_release_candidate.sh  delete_stacks.sh  mark_jira_released.sh  update_release_notes.sh
.github/workflows/: cdk_package_code.yml  cdk_release_code.yml  create_int_release_candidate.yml  create_release_candidate.yml  delete_old_cloudformation_stacks.yml  dependabot_auto_appprove_and_merge.yml  mark_jira_released.yml  pull_request.yml  quality_checks.yml  release.yml  sam_package_code.yml  sam_release_code.yml  sync_copilot.yml  update_release_notes.yml
SAMtemplates/: lambda_resources.yaml  main_template.yaml
create_release_notes/: create_release_notes.py
mark_jira_released/: mark_jira_released.py
release_cut/: release_cut.py
release_notes/: v1.1.100-alpha.md  v1.1.101-alpha.md  v1.1.102-alpha.md  v1.1.103-alpha.md  v1.1.104-alpha.md  v1.1.105-alpha.md  v1.1.106-alpha.md  v1.1.107-alpha.md  v1.1.108-alpha.md  v1.1.109-alpha.md  v1.1.110-alpha.md  v1.1.60-alpha.md  v1.1.61-alpha.md  v1.1.62-alpha.md  v1.1.63-alpha.md  v1.1.64-alpha.md  v1.1.65-alpha.md  v1.1.66-alpha.md  v1.1.67-alpha.md  v1.1.68-alpha.md  v1.1.69-alpha.md  v1.1.70-alpha.md  v1.1.71-alpha.md  v1.1.72-alpha.md  v1.1.73-alpha.md  v1.1.74-alpha.md  v1.1.75-alpha.md  v1.1.76-alpha.md  v1.1.77-alpha.md  v1.1.78-alpha.md  v1.1.79-alpha.md  v1.1.80-alpha.md  v1.1.81-alpha.md  v1.1.82-alpha.md  v1.1.83-alpha.md  v1.1.84-alpha.md  v1.1.85-alpha.md  v1.1.86-alpha.md  v1.1.87-alpha.md  v1.1.88-alpha.md  (+11 more)
scripts/: check_python_licenses.sh  run_cfn_guard.sh
tests/: common.py  test_create_release_notes.py  test_create_release_notes_create_release_notes.py  test_create_release_notes_get_jira_details.py  test_create_release_notes_lambda_handler.py  test_create_release_notes_process_event.py  test_get_jira_details.py  test_mark_jira_released.py  test_mark_jira_released_lambda_handler.py  test_mark_jira_released_process_event.py  test_process_event.py  test_release_cut.py  test_to_bool.py
