[project]
python = "^3.12"

[tool.poetry]
name = "aws-prescriptions"
version = "0.0.1-alpha"
description = "Prescriptions API Definitions"
license = "MIT"
authors = [
    "Anthony Brown <anthony.brown8@nhs.net>",
    "Matthew Popat <matthew.popat1@nhs.net>",
    "Chris Matus <chris.matus@nhs.net>",
    "Phil Gee <phil.gee@nhs.net>",
    "Kris Szlapa <kris.szlapa1@nhs.net>",
    "Jack Spagnoli <jack.spagnoli1@nhs.net>",
    "Tom Smith <tom.smith24@nhs.net>",
    "Adam Brown <adam.brown41@nhs.net>",
    "Sean Steberis <sean.steberis2@nhs.net>",
    "Kate.Bobyn <kate.bobyn2@nhs.net>"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/electronic-prescription-service-release-notes"

[tool.poetry.dependencies]
python = "^3.12"
atlassian-python-api = "^3.41.19"
pygithub = "^2.5.0"
aws-lambda-powertools = "^3.4.1"
fastjsonschema = "^2.21.1"

[tool.poetry.group.release_notes.dependencies]
python = "^3.12"
atlassian-python-api = "^3.41.19"
pygithub = "^2.5.0"
aws-lambda-powertools = "^3.4.1"
fastjsonschema = "^2.21.1"

[tool.poetry.group.mark_released.dependencies]
python = "^3.12"
atlassian-python-api = "^3.41.19"
aws-lambda-powertools = "^3.4.1"
fastjsonschema = "^2.21.1"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
aws-sam-cli = "^1.132.0"
pip-licenses = "^5.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
semver = "^3.0.2"
awscliv2 = "^2.3.1"
gitpython = "^3.1.44"
coverage = "^7.6.10"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
