[project]
python = "^3.12"
name = "electronic-prescription-service-release-notes"

[tool.poetry]
version = "0.0.1-alpha"
description = "Prescriptions API Definitions"
license = "MIT"
authors = [
    "EPS Team"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/electronic-prescription-service-release-notes"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
atlassian-python-api = "^3.41.19"
pygithub = "^2.6.1"
aws-lambda-powertools = "^3.15.1"
fastjsonschema = "^2.21.1"

[tool.poetry.group.release_notes.dependencies]
python = "^3.12"
atlassian-python-api = "^3.41.19"
pygithub = "^2.6.1"
aws-lambda-powertools = "^3.15.1"
fastjsonschema = "^2.21.1"

[tool.poetry.group.mark_released.dependencies]
python = "^3.12"
atlassian-python-api = "^3.41.19"
aws-lambda-powertools = "^3.15.1"
fastjsonschema = "^2.21.1"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
aws-sam-cli = "^1.142.1"
pip-licenses = "^5.0.0"
black = "^25.1.0"
flake8 = "^7.3.0"
pre-commit = "^4.1.0"
semver = "^3.0.4"
awscliv2 = "^2.3.1"
gitpython = "^3.1.44"
coverage = "^7.9.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
