[project]
python = "^3.12"
name = "electronic-prescription-service-release-notes"

[tool.poetry]
version = "0.0.1-alpha"
description = "Prescriptions API Definitions"
license = "MIT"
authors = [
    "EPS Team"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/electronic-prescription-service-release-notes"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
atlassian-python-api = "4.0.7"
pygithub = "^2.8.1"
aws-lambda-powertools = "^3.22.1"
fastjsonschema = "^2.21.2"

[tool.poetry.group.release-notes.dependencies]
python = "^3.12"
atlassian-python-api = "4.0.7"
pygithub = "^2.8.1"
aws-lambda-powertools = "^3.22.1"
fastjsonschema = "^2.21.2"

[tool.poetry.group.mark-released.dependencies]
python = "^3.12"
atlassian-python-api = "4.0.7"
aws-lambda-powertools = "^3.22.1"
fastjsonschema = "^2.21.2"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
aws-sam-cli = "^1.146.0"
pip-licenses = "^5.5.0"
black = "^25.9.0"
flake8 = "^7.3.0"
pre-commit = "^4.3.0"
semver = "^3.0.4"
awscliv2 = "^2.3.1"
gitpython = "^3.1.45"
coverage = "^7.11.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
